--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
     "paths": {
-      "app/*": ["./packages/app/*"],
+      // "app/*": ["./packages/app/*"],
       "@my/ui/*": ["./packages/ui/*"],
       "@my/config/*": ["./packages/config/*"]
     }
